--- a/capacitacao-senai-client/platformio.ini
+++ b/capacitacao-senai-client/platformio.ini
@@ -12,3 +12,10 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	adafruit/Adafruit GFX Library@^1.10.6
+	adafruit/Adafruit SSD1306@^2.4.3
+	greiman/SSD1306Ascii@^1.3.0
+	ottowinter/I2Cdevlib-esphomelib@^1.1.0
+	adafruit/Adafruit BusIO@^1.7.2
